v0.80 - Increase the the top margin for single column post style to 300px from 220px so that more of image is visible. - Fix thumbnails overflowing when using stretched thumbnail size in mobiles. - Add this changelog file.

--- a/assets/css/src/af-layout-responsive.scss
+++ b/assets/css/src/af-layout-responsive.scss
@@ -60,9 +60,9 @@
   .post-thumbnail {
     .stretched {
       float: none !important;
-      width: 120%;
+      width: 100vw;
       max-width: 120%;
-      margin: auto -10%;
+      margin: auto -20px;
       margin-bottom: 12px;
     }
   }
