--- a/assets/css/src/post-layouts.scss
+++ b/assets/css/src/post-layouts.scss
@@ -28,7 +28,7 @@
   .entry {
     width: 60%;
     margin: auto;
-    margin-top: 220px;
+    margin-top: 300px;
     background: rgba($light-1, 1) !important;
     @include border-radius(1em);
     padding: $padding;
